--- a/CloudProjectAutomation/test-output/index.html
+++ b/CloudProjectAutomation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\2126765\AppData\Local\Temp\10\testng-eclipse-145300313\testng-customsuite.xml</span>
+                    <span>C:\Users\2126765\AppData\Local\Temp\12\testng-eclipse-786963504\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)">AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)">AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="verifytable">verifytable</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC004" class="method navigator-link" hash-for-method="verifyCheckBox">verifyCheckBox</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,30 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.TCs.TC003</span>
+              <span class="class-name">com.TCs.TC004</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)">
-                  </a> <!-- AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA) -->
-                  <span class="method-name">AddDataInTable</span>
-                  <span class="parameters">(Sundar, V, 29, sundar@abc.co, 30000, QA)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)">
-                  </a> <!-- AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA) -->
-                  <span class="method-name">AddDataInTable</span>
-                  <span class="parameters">(Ajithra, G, 29, aju@abc.co, 35000, QA)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifytable">
-                  </a> <!-- verifytable -->
-                  <span class="method-name">verifytable</span>
+                  <a name="verifyCheckBox">
+                  </a> <!-- verifyCheckBox -->
+                  <span class="method-name">verifyCheckBox</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\10\testng-eclipse-145300313\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\12\testng-eclipse-786963504\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -172,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.TCs.TC003&quot;/&gt;
+      &lt;class name=&quot;com.TCs.TC004&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -212,24 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifytable')
-data.setCell(0, 2, 'com.TCs.TC003')
-data.setCell(0, 3, 7403);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'AddDataInTable')
-data.setCell(1, 2, 'com.TCs.TC003')
-data.setCell(1, 3, 2609);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'AddDataInTable')
-data.setCell(2, 2, 'com.TCs.TC003')
-data.setCell(2, 3, 2568);
+data.setCell(0, 1, 'verifyCheckBox')
+data.setCell(0, 2, 'com.TCs.TC004')
+data.setCell(0, 3, 1220);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -244,20 +210,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.TCs.TC003</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifyButtons</span>
-                <br/>
-                <span class="ignored-method-name">verifyRadioBtns</span>
-                <br/>
-                <span class="ignored-method-name">verifyLinks</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -266,34 +221,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.TCs.TC003</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.TCs.TC004</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">reachElementsMenu</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">verifytable</span>
-                <span class="method-start">16028 ms</span>
+                <span class="method-name">verifyCheckBox</span>
+                <span class="method-start">52718 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">23434 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)</span>
-                <span class="method-start">24774 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)</span>
-                <span class="method-start">27385 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">reload</span>
-                <span class="method-start">29954 ms</span>
+                <span class="method-start">53940 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">30523 ms</span>
+                <span class="method-start">96754 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
