--- a/CloudProjectAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/CloudProjectAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f376b9">  <td>22/05/10 19:30:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.AddDataInTable(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:5, instance:com.TCs.TC003@791f145a]">AddDataInTable</td> 
-  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/10 19:30:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.AddDataInTable(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:5, instance:com.TCs.TC003@791f145a]">AddDataInTable</td> 
-  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/10 19:30:25</td>   <td>-27379</td> <td>&nbsp;</td><td title="&gt;&gt;TC003.reachElementsMenu()[pri:0, instance:com.TCs.TC003@791f145a]">&gt;&gt;reachElementsMenu</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/10 19:30:55</td>   <td>2569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@791f145a]">&lt;&lt;reload</td> 
-<td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/10 19:30:55</td>   <td>2569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@791f145a]">&lt;&lt;reload</td> 
-<td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/10 19:30:55</td>   <td>3139</td> <td>&nbsp;</td><td title="&lt;&lt;TC003.tearDown()[pri:0, instance:com.TCs.TC003@791f145a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/10 19:30:41</td>   <td>-11357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.verifytable()[pri:4, instance:com.TCs.TC003@791f145a]">verifytable</td> 
-  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/12 20:20:37</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC004.reachElementsMenu()[pri:0, instance:com.TCs.TC004@60bd273d]">&gt;&gt;reachElementsMenu</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261031890</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/12 20:21:31</td>   <td>53935</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC004.reload()[pri:0, instance:com.TCs.TC004@60bd273d]">&lt;&lt;reload</td> 
+<td>&nbsp;</td>  <td>main@1261031890</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/12 20:22:13</td>   <td>96748</td> <td>&nbsp;</td><td title="&lt;&lt;TC004.tearDown()[pri:0, instance:com.TCs.TC004@60bd273d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261031890</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/12 20:21:29</td>   <td>52712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC004.verifyCheckBox()[pri:0, instance:com.TCs.TC004@60bd273d]">verifyCheckBox</td> 
+  <td>main@1261031890</td>   <td></td> </tr>
 </table>
