--- a/CloudProjectAutomation/test-output/index.html
+++ b/CloudProjectAutomation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\2126765\AppData\Local\Temp\15\testng-eclipse--1657473643\testng-customsuite.xml</span>
+                    <span>C:\Users\2126765\AppData\Local\Temp\16\testng-eclipse-11561710\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\15\testng-eclipse--1657473643\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\16\testng-eclipse-11561710\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -190,12 +190,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyCheckBox')
 data.setCell(0, 2, 'com.TCs.TC004')
-data.setCell(0, 3, 15521);
+data.setCell(0, 3, 8530);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -228,15 +228,15 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyCheckBox</span>
-                <span class="method-start">13321 ms</span>
+                <span class="method-start">22725 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">28845 ms</span>
+                <span class="method-start">31260 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">29588 ms</span>
+                <span class="method-start">31282 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
