--- a/CloudProjectAutomation/test-output/index.html
+++ b/CloudProjectAutomation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\2126765\AppData\Local\Temp\16\testng-eclipse-11561710\testng-customsuite.xml</span>
+                    <span>C:\Users\2126765\AppData\Local\Temp\18\testng-eclipse--1574215958\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC004" class="method navigator-link" hash-for-method="verifyCheckBox">verifyCheckBox</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC005" class="method navigator-link" hash-for-method="verifyBrowserWindows">verifyBrowserWindows</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.TCs.TC004</span>
+              <span class="class-name">com.TCs.TC005</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyCheckBox">
-                  </a> <!-- verifyCheckBox -->
-                  <span class="method-name">verifyCheckBox</span>
+                  <a name="verifyBrowserWindows">
+                  </a> <!-- verifyBrowserWindows -->
+                  <span class="method-name">verifyBrowserWindows</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\16\testng-eclipse-11561710\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\18\testng-eclipse--1574215958\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.TCs.TC004&quot;/&gt;
+      &lt;class name=&quot;com.TCs.TC005&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyCheckBox')
-data.setCell(0, 2, 'com.TCs.TC004')
-data.setCell(0, 3, 8530);
+data.setCell(0, 1, 'verifyBrowserWindows')
+data.setCell(0, 2, 'com.TCs.TC005')
+data.setCell(0, 3, 5544);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,22 +221,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.TCs.TC004</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.TCs.TC005</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">reachElementsMenu</span>
+                <span class="method-name">reachAlertsMenu</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">verifyCheckBox</span>
-                <span class="method-start">22725 ms</span>
+                <span class="method-name">verifyBrowserWindows</span>
+                <span class="method-start">34575 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">31260 ms</span>
+                <span class="method-start">40124 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">31282 ms</span>
+                <span class="method-start">41605 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
