--- a/CloudProjectAutomation/test-output/old/Default suite/methods.html
+++ b/CloudProjectAutomation/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f376b9">  <td>22/05/18 18:10:33</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC004.reachElementsMenu()[pri:0, instance:com.TCs.TC004@a38c7fe]">&gt;&gt;reachElementsMenu</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/18 18:10:56</td>   <td>22715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC004.verifyCheckBox()[pri:0, instance:com.TCs.TC004@a38c7fe]">verifyCheckBox</td> 
-  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/18 18:11:04</td>   <td>31251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC004.reload()[pri:0, instance:com.TCs.TC004@a38c7fe]">&lt;&lt;reload</td> 
-<td>&nbsp;</td>  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/18 18:11:04</td>   <td>31272</td> <td>&nbsp;</td><td title="&lt;&lt;TC004.tearDown()[pri:0, instance:com.TCs.TC004@a38c7fe]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1594138273</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/20 19:13:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC005.reachAlertsMenu()[pri:0, instance:com.TCs.TC005@51c668e3]">&gt;&gt;reachAlertsMenu</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@95396809</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/20 19:13:58</td>   <td>41601</td> <td>&nbsp;</td><td title="&lt;&lt;TC005.tearDown()[pri:0, instance:com.TCs.TC005@51c668e3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@95396809</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/20 19:13:51</td>   <td>34570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC005.verifyBrowserWindows()[pri:0, instance:com.TCs.TC005@51c668e3]">verifyBrowserWindows</td> 
+  <td>main@95396809</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/20 19:13:57</td>   <td>40120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC005.reload()[pri:0, instance:com.TCs.TC005@51c668e3]">&lt;&lt;reload</td> 
+<td>&nbsp;</td>  <td>main@95396809</td>   <td></td> </tr>
 </table>
