--- a/CloudProjectAutomation/test-output/old/Default suite/methods.html
+++ b/CloudProjectAutomation/test-output/old/Default suite/methods.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f376b9">  <td>22/05/25 18:12:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC005.reload()[pri:0, instance:com.TCs.TC005@6221a451]">&lt;&lt;reload</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/25 18:12:39</td>   <td>905</td> <td>&nbsp;</td><td title="&lt;&lt;TC005.tearDown()[pri:0, instance:com.TCs.TC005@6221a451]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/25 18:12:32</td>   <td>-6661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC005.verifyFrames()[pri:2, instance:com.TCs.TC005@6221a451]">verifyFrames</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/25 18:12:16</td>   <td>-22764</td> <td>&nbsp;</td><td title="&gt;&gt;TC005.reachAlertsMenu()[pri:0, instance:com.TCs.TC005@6221a451]">&gt;&gt;reachAlertsMenu</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/27 18:24:22</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC006.reachWidgetsMenu()[pri:0, instance:com.TCs.TC006@5d534f5d]">&gt;&gt;reachWidgetsMenu</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/27 18:24:38</td>   <td>16038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC006.verifyAccordian()[pri:0, instance:com.TCs.TC006@5d534f5d]">verifyAccordian</td> 
+  <td>main@903525611</td>   <td></td> </tr>
 </table>
