--- a/CloudProjectAutomation/test-output/old/Default suite/methods.html
+++ b/CloudProjectAutomation/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f376b9">  <td>22/05/27 18:24:22</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC006.reachWidgetsMenu()[pri:0, instance:com.TCs.TC006@5d534f5d]">&gt;&gt;reachWidgetsMenu</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/27 18:24:38</td>   <td>16038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC006.verifyAccordian()[pri:0, instance:com.TCs.TC006@5d534f5d]">verifyAccordian</td> 
-  <td>main@903525611</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/31 21:57:11</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SixTest.reachWidgetsMenu()[pri:0, instance:com.TCs.SixTest@70e9c95d]">&gt;&gt;reachWidgetsMenu</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/31 21:57:28</td>   <td>17077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SixTest.verifyAutoComplete()[pri:1, instance:com.TCs.SixTest@70e9c95d]">verifyAutoComplete</td> 
+  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/31 21:57:34</td>   <td>23187</td> <td>&nbsp;</td><td title="&lt;&lt;SixTest.tearDown()[pri:0, instance:com.TCs.SixTest@70e9c95d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
 </table>
